--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ ul li a {
 }
 
 .header-logo {
-    font-weight: 700;
+    font-weight: bold;
 }
 
 .header-links {
@@ -110,6 +110,7 @@ ul li a {
     align-items: center;
     justify-content: center;
     gap: 24px;
+    margin-bottom: 96px;
 }
 
 .information .panel-container .image {
@@ -131,4 +132,73 @@ ul li a {
     color: #1f2937;
     word-wrap: normal;
     text-align: center;
+}
+
+.quote {
+    background-color: #e5e7eb;
+    color: #1f2937;
+    padding: 48px 96px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.quote .quote-body .message {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    word-wrap: normal;
+    text-align: left;
+}
+
+.quote .quote-body .author {
+    text-align: right;
+}
+
+.call-to-action {
+    background-color: #f9faf8;
+    color: #f9faf8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.call-to-action .cta-main {
+    background-color: #3882f6;
+    margin: 24px;
+    padding: 24px 96px;
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.call-to-action .cta-main .left {
+    display: flex;
+    flex-direction: column;
+}
+
+.call-to-action .cta-main .left .cta-header {
+    font-weight: bold;
+}
+
+.call-to-action .cta-main .right button.sign-up {
+    background-color: #3882f6;
+    color: #f9faf8;
+    border: 2px solid #f9faf8;
+    border-radius: 8px;
+    padding: 8px 24px;
+    margin: 0 24px;
+    font-weight: bolder;
+}
+
+.footer {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    font-weight: lighter;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 24px;
 }
